# rz-bindgen

./: .clang-format  .gitignore  README.md  binder.py  binder_class.py  binder_func.py  binder_generic.py  cibw_before_all.sh  cibw_before_build.sh  default.nix  header.py  main.py  meson.build  meson_options.txt  module.py  module_class.py  module_func.py  module_generic.py  mypy.ini  py_install.py  pylintrc  pyproject.toml  writer.py
.github/workflows/: ci.yml  lint.yml  pages.yml  release.yml
.reuse/: dep5
clang/: cindex.py  wrapper.py  wrapper.pyi
cutter/: CMakeLists.txt  CutterRzBindings.cpp  CutterRzBindings.h  Python.h  PythonConsole.cpp  PythonConsole.h  PythonConsole.ui  PythonConsoleWriter.cpp  PythonConsoleWriter.h  util.h
doc/: README.md  bin.md  bin_plugin.md  cmd.md  core.md  intro.md
examples/: 1-rz_core.py  2-rz_bin_plugin.py  2a-rz_bin_plugin.py  3-cle_bin_plugin.py  4a-rz_cmd.py  4b-rz_cmd.py
plugin/: meson.build  plugin.c
rizin/: meson.build  plugin.c
src/: README.md  binding_class.py  binding_director.py  binding_enum.py  binding_func.py  binding_generic.py  binding_generic_specializations.py  binding_typemap.py  bindings.py  cparser_header.py  cparser_types.py  generator_sphinx.py  generator_swig.py  header.py  lint.py  main.py  module.py  module_class.py  module_director.py  module_enum.py  module_func.py  module_generic.py  module_typemap.py  rizin_lib.i  rizin_post.i  rizin_pre.i  writer.py
src/clang/: cindex.pyi  wrapper.py  wrapper.pyi
src/snippets_swig/: README.md  cmd_director.i  iterators.py  prologue.i  register_command.py  register_swig_command.cpp
subprojects/: rizin.wrap
