[build-system]
requires = [
  "meson>=0.62.2",
  "meson-python>=0.7.0"
]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ['-Dwheel=true']

[tool.cibuildwheel]
build-verbosity = 3
before-all = "bash {project}/cibw_before_all.sh"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = "pp*"

[tool.cibuildwheel.linux]
environment = { PATH="/opt/rh/llvm-toolset-7.0/root/usr/bin:/opt/rh/llvm-toolset-7.0/root/usr/sbin:/opt/rh/devtoolset-10/root/usr/bin:$PATH", LD_LIBRARY_PATH="/opt/rh/llvm-toolset-7.0/root/usr/lib64:/opt/rh/devtoolset-10/root/usr/lib64:/opt/rh/devtoolset-10/root/usr/lib:/opt/rh/devtoolset-10/root/usr/lib64/dyninst:/opt/rh/devtoolset-10/root/usr/lib/dyninst:$LD_LIBRARY_PATH" }

[tool.cibuildwheel.windows]
environment = { CMAKE_PREFIX_PATH="C:\\rizin" }
archs = ["AMD64"]

[project]
name = "rz-bindings"
dynamic = [
  'version',
]
requires-python = ">=3.8"
readme = "README.md"
